--- a/SpringBootDemo/pom.xml
+++ b/SpringBootDemo/pom.xml
@@ -43,6 +43,21 @@
 		    <version>8.5.34</version>
 		</dependency>
 		
+				<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <scope>runtime</scope>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.1-api -->
+<dependency>
+    <groupId>org.hibernate.javax.persistence</groupId>
+    <artifactId>hibernate-jpa-2.1-api</artifactId>
+    <version>1.0.2.Final</version>
+</dependency>
+		
+		
 	</dependencies>
 
 	<build>
