--- a/SpringBootDemo/src/main/resources/application.properties
+++ b/SpringBootDemo/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.mvc.view.prefix=/UIPages/
 spring.mvc.view.suffix=.jsp
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:EmployeeDB
+spring.datasource.url=jdbc:h2:mem:testdb
